@@ -62,7 +62,7 @@ static void sp_string_read_content (SPObject *object);
 static void sp_string_update (SPObject *object, SPCtx *ctx, unsigned int flags);
 
 static void sp_string_calculate_dimensions (SPString *string);
-static void sp_string_set_shape (SPString *string, SPLayoutData *ly, ArtPoint *cp, gboolean inspace);
+static void sp_string_set_shape (SPString *string, SPLayoutData *ly, ArtPoint *cp, gboolean *inspace);
 
 static SPCharsClass *string_parent_class;
 
@@ -231,8 +231,13 @@ sp_string_calculate_dimensions (SPString *string)
 			
 			unival = g_utf8_get_char (p);
 
-			if (unival == ' ') {
-				if (intext) inspace = TRUE;
+			if (g_unichar_isspace(unival)) {
+				if (string->ly->xml_space == SP_XML_SPACE_PRESERVE) {
+					string->advance.x += spadv.x;
+					string->advance.y -= spadv.y;
+				}  else if (unival != '\n') { /* SP_XML_SPACE_DEFAULT */
+					if (intext) inspace = TRUE;
+				}
 			} else {
 				NRRectF bbox;
 				NRPointF adv;
@@ -274,7 +279,7 @@ sp_string_calculate_dimensions (SPString *string)
 /* fixme: Should values be parsed by parent? */
 
 static void
-sp_string_set_shape (SPString *string, SPLayoutData *ly, ArtPoint *cp, gboolean inspace)
+sp_string_set_shape (SPString *string, SPLayoutData *ly, ArtPoint *cp, gboolean *pinspace)
 {
 	SPChars *chars;
 	SPStyle *style;
@@ -285,6 +290,7 @@ sp_string_set_shape (SPString *string, SPLayoutData *ly, ArtPoint *cp, gboolean 
 	gdouble x, y;
 	NRMatrixF a;
 	const guchar *p;
+	gboolean inspace;
 	gboolean intext;
 	gint len, pos;
 	unsigned int metrics;
@@ -331,10 +337,11 @@ sp_string_set_shape (SPString *string, SPLayoutData *ly, ArtPoint *cp, gboolean 
 	nr_matrix_f_set_scale (&a, 1.0, -1.0);
 
 	intext = FALSE;
+	inspace = (pinspace && (string->ly->xml_space == SP_XML_SPACE_DEFAULT)) ? *pinspace : FALSE;
 	pos = 0;
 	for (p = string->text; p && *p; p = g_utf8_next_char (p)) {
 		gunichar unival;
-		if (inspace) {
+		if (inspace) {  /* && SP_XML_SPACE_DEFAULT */
 			string->p[pos].x = x + spadv.x;
 			string->p[pos].y = y - spadv.y;
 		} else {
@@ -342,8 +349,14 @@ sp_string_set_shape (SPString *string, SPLayoutData *ly, ArtPoint *cp, gboolean 
 			string->p[pos].y = y;
 		}
 		unival = g_utf8_get_char (p);
-		if (unival == ' ') {
-			if (intext) inspace = TRUE;
+
+		if (g_unichar_isspace(unival)) {
+			if (string->ly->xml_space == SP_XML_SPACE_PRESERVE) {
+				x += spadv.x;
+				y -= spadv.y;
+			}  else if (unival != '\n') { /* SP_XML_SPACE_DEFAULT */
+				if (intext) inspace = TRUE;
+			}
 		} else {
 			NRPointF adv;
 			gint glyph;
@@ -382,6 +395,9 @@ sp_string_set_shape (SPString *string, SPLayoutData *ly, ArtPoint *cp, gboolean 
 
 	cp->x = x;
 	cp->y = y;
+
+	if (pinspace)
+		*pinspace = inspace;
 }
 
 /* SPTSpan */
@@ -402,7 +418,7 @@ static void sp_tspan_bbox (SPItem *item, NRRectF *bbox, const NRMatrixD *transfo
 static NRArenaItem *sp_tspan_show (SPItem *item, NRArena *arena, unsigned int key, unsigned int flags);
 static void sp_tspan_hide (SPItem *item, unsigned int key);
 
-static void sp_tspan_set_shape (SPTSpan *tspan, SPLayoutData *ly, ArtPoint *cp, gboolean firstline, gboolean inspace);
+static void sp_tspan_set_shape (SPTSpan *tspan, SPLayoutData *ly, ArtPoint *cp, gboolean firstline, gboolean *inspace);
 
 static SPItemClass *tspan_parent_class;
 
@@ -461,6 +477,7 @@ sp_tspan_init (SPTSpan *tspan)
 	sp_svg_length_unset (&tspan->ly.dx, SP_SVG_UNIT_NONE, 0.0, 0.0);
 	sp_svg_length_unset (&tspan->ly.dy, SP_SVG_UNIT_NONE, 0.0, 0.0);
 	tspan->ly.linespacing = 1.0;
+	tspan->ly.xml_space = SP_XML_SPACE_DEFAULT;
 	tspan->string = NULL;
 }
 
@@ -497,6 +514,7 @@ sp_tspan_build (SPObject *object, SPDocument *doc, SPRepr *repr)
 	sp_object_read_attr (object, "dy");
 	sp_object_read_attr (object, "rotate");
 	sp_object_read_attr (object, "sodipodi:role");
+	sp_object_read_attr (object, "xml:space");
 }
 
 static void
@@ -562,6 +580,13 @@ sp_tspan_set (SPObject *object, unsigned int key, const unsigned char *value)
 			tspan->role = SP_TSPAN_ROLE_LINE;
 		} else {
 			tspan->role = SP_TSPAN_ROLE_UNSPECIFIED;
+		}
+		break;
+	case SP_ATTR_XML_SPACE:
+		if (value && !strcmp (value, "preserve")) {
+			tspan->ly.xml_space = SP_XML_SPACE_PRESERVE;
+		} else {
+			tspan->ly.xml_space = SP_XML_SPACE_DEFAULT;
 		}
 		break;
 	default:
@@ -660,6 +685,20 @@ sp_tspan_modified (SPObject *object, unsigned int flags)
 	}
 }
 
+static const gchar*
+sp_text_get_xml_space_string(unsigned int space)
+{
+	switch(space)
+	{
+	case SP_XML_SPACE_DEFAULT:
+		return "default";
+	case SP_XML_SPACE_PRESERVE:
+		return "preserve";
+	default:
+		return NULL;
+	}
+}
+
 static SPRepr *
 sp_tspan_write (SPObject *object, SPRepr *repr, guint flags)
 {
@@ -679,6 +718,8 @@ sp_tspan_write (SPObject *object, SPRepr *repr, guint flags)
 	if (flags & SP_OBJECT_WRITE_SODIPODI) {
 		sp_repr_set_attr (repr, "sodipodi:role", (tspan->role != SP_TSPAN_ROLE_UNSPECIFIED) ? "line" : NULL);
 	}
+	if (tspan->ly.xml_space != SP_XML_SPACE_DEFAULT)
+		sp_repr_set_attr (repr, "xml:space", sp_text_get_xml_space_string(tspan->ly.xml_space));
 
 	if (flags & SP_OBJECT_WRITE_BUILD) {
 		SPRepr *rstr;
@@ -746,7 +787,7 @@ sp_tspan_hide (SPItem *item, unsigned int key)
 }
 
 static void
-sp_tspan_set_shape (SPTSpan *tspan, SPLayoutData *ly, ArtPoint *cp, gboolean firstline, gboolean inspace)
+sp_tspan_set_shape (SPTSpan *tspan, SPLayoutData *ly, ArtPoint *cp, gboolean firstline, gboolean *inspace)
 {
 	SPStyle *style;
 
@@ -846,6 +887,7 @@ sp_text_init (SPText *text)
 	sp_svg_length_unset (&text->ly.dx, SP_SVG_UNIT_NONE, 0.0, 0.0);
 	sp_svg_length_unset (&text->ly.dy, SP_SVG_UNIT_NONE, 0.0, 0.0);
 	text->ly.linespacing = 1.0;
+	text->ly.xml_space = SP_XML_SPACE_DEFAULT;
 	text->children = NULL;
 }
 
@@ -927,6 +969,7 @@ sp_text_build (SPObject *object, SPDocument *doc, SPRepr *repr)
 	sp_object_read_attr (object, "dy");
 	sp_object_read_attr (object, "rotate");
 	sp_object_read_attr (object, "sodipodi:linespacing");
+	sp_object_read_attr (object, "xml:space");
 
 	sp_text_update_immediate_state (text);
 }
@@ -992,6 +1035,13 @@ sp_text_set (SPObject *object, unsigned int key, const unsigned char *value)
 			text->ly.linespacing = CLAMP (text->ly.linespacing, 0.01, 10.0);
 		}
 		sp_object_request_update (object, SP_OBJECT_MODIFIED_FLAG | SP_TEXT_LAYOUT_MODIFIED_FLAG);
+		break;
+	case SP_ATTR_XML_SPACE:
+		if (value && !strcmp (value, "preserve")) {
+			text->ly.xml_space = SP_XML_SPACE_PRESERVE;
+		} else {
+			text->ly.xml_space = SP_XML_SPACE_DEFAULT;
+		}
 		break;
 	default:
 		if (((SPObjectClass *) text_parent_class)->set)
@@ -1240,6 +1290,8 @@ sp_text_write (SPObject *object, SPRepr *repr, guint flags)
 	if (text->ly.dx.set) sp_repr_set_double_attribute (repr, "dx", text->ly.dx.computed);
 	if (text->ly.dy.set) sp_repr_set_double_attribute (repr, "dy", text->ly.dy.computed);
 	if (text->ly.rotate_set) sp_repr_set_double_attribute (repr, "rotate", text->ly.rotate);
+	if (text->ly.xml_space != SP_XML_SPACE_DEFAULT)
+		sp_repr_set_attr (repr, "xml:space", sp_text_get_xml_space_string(text->ly.xml_space));
 
 	if (((SPObjectClass *) (text_parent_class))->write)
 		((SPObjectClass *) (text_parent_class))->write (object, repr, flags);
@@ -1407,7 +1459,7 @@ sp_text_set_shape (SPText *text)
 {
 	ArtPoint cp;
 	SPObject *child;
-	gboolean isfirstline, haslast, lastwastspan;
+	gboolean isfirstline, inspace;
 	NRRectF paintbox;
 
 	/* The logic should be: */
@@ -1418,8 +1470,7 @@ sp_text_set_shape (SPText *text)
 	cp.y = text->ly.y.computed;
 
 	isfirstline = TRUE;
-	haslast = FALSE;
-	lastwastspan = FALSE;
+	inspace = FALSE;
 
 	child = text->children;
 	while (child != NULL) {
@@ -1532,17 +1583,13 @@ sp_text_set_shape (SPText *text)
 		/* Set child shapes */
 		for (next = child; (next != NULL) && (next != new); next = next->next) {
 			if (SP_IS_STRING (next)) {
-				sp_string_set_shape (SP_STRING (next), &text->ly, &cp, haslast);
-				haslast = TRUE;
-				lastwastspan = FALSE;
+				sp_string_set_shape (SP_STRING (next), &text->ly, &cp, &inspace);
 			} else {
 				SPTSpan *tspan;
 				tspan = SP_TSPAN (next);
 				if (tspan->ly.dx.set) cp.x += tspan->ly.dx.computed;
 				if (tspan->ly.dy.set) cp.y += tspan->ly.dy.computed;
-				sp_tspan_set_shape (tspan, &text->ly, &cp, isfirstline, haslast && !lastwastspan);
-				haslast = TRUE;
-				lastwastspan = TRUE;
+				sp_tspan_set_shape (tspan, &text->ly, &cp, isfirstline, &inspace);
 			}
 		}
 		child = next;
